Add admin MANUAL todo tasks outside CampaignOps
